--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,7 +13,7 @@
         android:fillViewport="true"
         android:layout_width="100dip"
         android:layout_height="match_parent"
-        android:background="#55ffffff">
+        android:background="#556677">
 
         <LinearLayout
             android:orientation="vertical"
@@ -28,6 +28,7 @@
         android:fillViewport="true"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
+        <!--
         <LinearLayout
             android:orientation="vertical"
             android:id="@+id/imagescroll"
@@ -35,6 +36,16 @@
             android:layout_height="wrap_content">
 
         </LinearLayout>
+        -->
+        <GridView
+            android:id="@+id/imagegrid"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:gravity="center"
+            android:numColumns="2"
+            android:stretchMode="columnWidth" >
+
+        </GridView>
     </ScrollView>
 
 </LinearLayout>
